[gd_scene load_steps=13 format=3 uid="uid://dfowgu6nj0x8l"]

[ext_resource type="PackedScene" path="res://special_scenes/combat_UI/gameover/WinnerBanner.tscn" id="1"]
[ext_resource type="Texture2D" uid="uid://bl1tvcs1kl7pk" path="res://assets/sprites/species/toriels.png" id="2"]
[ext_resource type="Texture2D" uid="uid://cc324hpq65dvo" path="res://assets/sources/chaos/character_mantiacs_1_beaten.png" id="3"]
[ext_resource type="Script" uid="uid://dau5ixccdil25" path="res://special_scenes/combat_UI/gameover/InsertName.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://b0q4ekrko18wp" path="res://special_scenes/combat_UI/gameover/HallOfFame.tscn" id="5"]
[ext_resource type="Texture2D" uid="uid://br7tlva81yodg" path="res://assets/sources/chaos/character_trixens_1_beaten.png" id="6"]
[ext_resource type="Texture2D" uid="uid://d3wadkcvypqyy" path="res://assets/sources/chaos/character_robolords_1_beaten.png" id="7"]
[ext_resource type="FontFile" uid="uid://dprehv4eo4p4u" path="res://assets/fonts/Pixel-Powerline-440555/Pixel Powerline.otf" id="15"]
[ext_resource type="Theme" uid="uid://dui8cebqku8x5" path="res://interface/themes/olympic_theme.tres" id="16"]
[ext_resource type="Script" uid="uid://hlyst7a7ubrw" path="res://special_scenes/combat_UI/gameover/SessionWinner.gd" id="17"]

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("15")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("15")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="SessionWinner" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("17")
hall_of_fame = ExtResource("5")

[node name="CelebrateWinner" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="CelebrateWinner"]
anchor_right = 1.0
offset_bottom = 59.0
theme_override_fonts/font = SubResource("3")
text = "Congratulations!!"
align = 1

[node name="Toriels" type="Sprite2D" parent="CelebrateWinner"]
position = Vector2(232, 417)
texture = ExtResource("2")

[node name="CharacterMantiacs1Beaten" type="Sprite2D" parent="CelebrateWinner"]
position = Vector2(844, 483)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3")

[node name="CharacterRobolords1Beaten" type="Sprite2D" parent="CelebrateWinner"]
position = Vector2(996, 480)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7")

[node name="CharacterTrixens1Beaten" type="Sprite2D" parent="CelebrateWinner"]
position = Vector2(1166, 484)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6")

[node name="WinnerBanner" parent="CelebrateWinner" instance=ExtResource("1")]
unique_name_in_owner = true

[node name="Marker2D" type="Marker2D" parent="CelebrateWinner"]

[node name="CanvasLayer" type="CanvasLayer" parent="CelebrateWinner"]
unique_name_in_owner = true

[node name="ColorRect" type="ColorRect" parent="CelebrateWinner/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.486275)

[node name="HBoxContainer" type="HBoxContainer" parent="CelebrateWinner/CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -333.0
offset_top = -29.5
offset_right = 333.0
offset_bottom = 29.5

[node name="InsertName" type="LineEdit" parent="CelebrateWinner/CanvasLayer/HBoxContainer"]
unique_name_in_owner = true
offset_right = 180.0
offset_bottom = 59.0
theme = ExtResource("16")
theme_override_fonts/font = SubResource("4")
align = 1
max_length = 3
placeholder_text = "P1 "
script = ExtResource("4")

[node name="Label2" type="Label" parent="CelebrateWinner/CanvasLayer/HBoxContainer"]
offset_left = 184.0
offset_right = 696.0
offset_bottom = 59.0
theme_override_fonts/font = SubResource("3")
text = "Insert Your name"
uppercase = true

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[connection signal="name_inserted" from="CelebrateWinner/CanvasLayer/HBoxContainer/InsertName" to="." method="_on_InsertName_name_inserted"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="CelebrateWinner/WinnerBanner"]
